/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package api.common.auth;

import "api/common/base.proto";
import "api/common/r.proto";

/*
Config
*/
option java_package = "io.github.pnoker.api.center.auth";
option java_outer_classname = "TenantProto";
option objc_class_prefix = "Auth";
option java_multiple_files = true;

/*
Api
服务接口，定义了租户相关的RPC调用
*/
service TenantApi {
  // 通过租户编码查询租户信息
  rpc SelectByCode (GrpcCodeQuery) returns (GrpcRTenantDTO);
}

// SelectByCode Query
// 查询租户编码的请求结构体
message GrpcCodeQuery {
  string code = 1; // 租户编码，唯一标识一个租户
}

// R of Tenant DTO
// 返回租户信息的响应结构体
message GrpcRTenantDTO {
  /*
  R
  通用返回结果，包含状态码、消息等
  */
  GrpcR result = 1;

  /*
  Data
  返回的租户数据
  */
  GrpcTenantDTO data = 2;
}

// Tenant DTO
// 租户数据结构体，包含租户的基本信息
message GrpcTenantDTO {
  /*
  Base
  通用基础字段（如ID、创建时间等）
  */
  GrpcBase base = 1;

  string tenant_name = 2; // 租户名称
  string tenant_code = 3; // 租户编码，唯一标识
  int32 enable_flag = 4; // 启用标识，1为启用，0为禁用
}